--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ru.librarian">
-    <application android:icon="@drawable/icon" android:label="Alchemy">
+    <application android:icon="@drawable/icon" android:label="AlchemyScoreboard">
         <activity android:name=".AlchemyActivity" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -11,5 +11,6 @@
         <activity android:name=".TurnActivity" android:label="Текущий ход"/>
         <activity android:name=".PlayersActivity" android:label="Игроки"/>
         <activity android:name=".HistoryActivity" android:label="История"/>
+        <activity android:name=".PlayerParamActivity"/>
     </application>
 </manifest>
