--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ru.librarian">
-    <application android:icon="@drawable/icon" android:label="AlchemyScoreboard">
+          package="ru.librarian"
+          android:versionCode="3"
+          android:versionName="1.0.2">
+    <uses-permission android:name="android.permission.READ_OWNER_DATA"/>
+    <uses-permission android:name="android.permission.WRITE_OWNER_DATA"/>
+    <uses-sdk android:minSdkVersion="7"/>
+    <application android:icon="@drawable/icon" android:label="Alchemy">
         <activity android:name=".AlchemyActivity" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
