--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2010. Сергей Лежнев
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ru.librarian"
           android:versionCode="3"
